# tradeAI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  start.py
alembic/: env.py
alembic/versions/: 001_initial.py  002_user_symbols.py
app/: config.py  database.py  exceptions.py  main.py
app/audit/: models.py  routes.py  schemas.py
app/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py
app/indicators/: models.py  routes.py  schemas.py  service.py
app/market_data/: models.py  routes.py  schemas.py  service.py
app/middleware/: audit.py  correlation.py
app/scheduler/: jobs.py
app/signals/: models.py  prompts.py  routes.py  schemas.py  service.py
docs/: ARCHITECTURE.md  DESIGN.md  PRD.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/dashboard/audit/: page.tsx
frontend/app/dashboard/overview/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/dashboard/signals/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: CandlestickChart.tsx
frontend/lib/: api.ts  auth.ts
